--- a/css/layout.sass
+++ b/css/layout.sass
@@ -1,4 +1,6 @@
 .nav
+  @media screen and (max-width: 990px)
+    display: none
   z-index: 5
   position: fixed
   background-color: #fff
@@ -48,9 +50,46 @@
       color: #77d3c2
       transition: all 0.2s
 
+.nav-mobile
+  position: fixed
+  background-color: #fff
+  z-index: 20
+  width: 100%
+  .main-nav-mobile
+    width: 100%
+    img
+      height: 100px
+    .main-nav-btn
+      float: right
+      img
+        height: 100px
+  .social-mobile
+    width: 100%
+    height: 100px
+    div
+      float: right
+      padding: 20px 0
+    span
+      font-size: 45px
+      padding: 0px 20px
+
+.nav-mobile-sildeout
+  position: fixed
+  z-index: 19
+  background-color: #fff
+  width: 100%
+  height: 500px
+  top: -500px
+  transition: all 0.3s
+
+.nav-mobile-sildeout-in
+  top: 0px
+  transition: all 0.3s
+
+
 .video-box
   margin: 0px auto
-  width: 700px
+  width: 100%
 
 
 .wrapper
@@ -114,7 +153,12 @@
   //   background-color: red
 
 .section-sponsors
-  // background-color: #ddd!important
+  .row
+    div
+      text-align: center
+  @media screen and (max-width: 990px)
+    img
+      width: 200px
 
 .section-banner
   background-image: url(../src/img/banner.jpg)
@@ -150,11 +194,67 @@
 
 
 .footer
+  width: 100%
+  background-color: #fff
+  .container
+    @media screen and (max-width: 990px)
+      width: 100%
+  .col-sm-4
+    margin: 40px 0
+    div
+      background-color: #ddd
+      height: 350px
+
+.loader
+  position: absolute
   background-color: #75c2b2
-  .wrapper
-    background-image: url(src/img/footer.png)
-    background-size: cover
-    height: 500px
+  height: 100%
+  width: 100%
+  z-index: 100
+
+.section-lineup, .section-news
+  @media screen and (max-width: 990px)
+    .container
+      padding-left: 0px!important
+      padding-right: 0px!important
+      @media screen and (max-width: 990px)
+        width: 100%!important
+
+.container-fluid
+  padding-left: 0px!important
+  padding-right: 0px!important
+
+.gridster
+  width: 1000px
+  margin: 0px auto
+  @media screen and (max-width: 990px)
+    width: 500px
+
+.section-lineup
+  .overlay
+    opacity: 0
+    position: absolute
+    height: 100%
+    width: 100%
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%)
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%)
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 )
+    transition: all 0.5s
+    cursor: pointer
+  .line-up-content
+    position: absolute
+    bottom: 0px
+    color: #ffffff
+    font-size: 24px
+    padding-left: 20px
+    padding-bottom: 20px
+  .col-xs-3
+    height: 250px
+    padding: 0px!important
+    background-color: grey
+  .row
+    margin: 0px!important
 
 //animate.css
 
@@ -208,3 +308,31 @@
 .bounceIn
   -webkit-animation-name: bounceIn
   animation-name: bounceIn
+
+
+.signal
+  border: 5px solid #fff
+  border-radius: 30px
+  height: 30px
+  left: 50%
+  margin: -15px 0 0 -15px
+  opacity: 0
+  position: absolute
+  top: 50%
+  width: 30px
+
+  animation: pulsate 1.3s ease-out
+  animation-iteration-count: infinite
+
+
+@keyframes pulsate
+  0%
+    transform: scale(.1)
+    opacity: 0.0
+
+  50%
+    opacity: 1
+
+  100%
+    transform: scale(1.2)
+    opacity: 0
