--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ video {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 110%;
+  min-width: 100%;
   min-height: 100%;
   width: auto;
   height: auto;
@@ -146,6 +146,9 @@ video {
   color: white;
   font-size: 18px;
   padding: 0 0 20px 20px !important; }
+  @media screen and (max-width: 990px) {
+    .section-sites .menu-overlay-text {
+      font-size: 55px; } }
 
 .section-lineup {
   text-align: center; }
@@ -160,6 +163,7 @@ video {
       margin-bottom: 30px; }
 
 .section-video {
+  text-align: center;
   background-color: #dddddd; }
   .section-video .wrapper {
     text-align: center; }
@@ -225,6 +229,9 @@ video {
   border-radius: 10px; }
   .arrow img {
     width: 100% !important; }
+  @media screen and (max-width: 990px) {
+    .arrow {
+      display: none; } }
 
 .arrow-move {
   background-position-y: 92px;
