--- a/css/style.sass
+++ b/css/style.sass
@@ -35,7 +35,7 @@ video
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
-  min-width: 110%
+  min-width: 100%
   min-height: 100%
   width: auto
   height: auto
@@ -159,6 +159,8 @@ video
     color: #ffffff
     font-size: 18px
     padding: 0 0 20px 20px!important
+    @media screen and (max-width: 990px)
+      font-size: 55px
 
 .section-lineup
   text-align: center
@@ -173,6 +175,9 @@ video
       margin-bottom: 30px
 
 .section-video
+  text-align: center
+  // background-image: url(../src/img/video.png)
+  // background-size: cover
   background-color: #ddd
   .wrapper
     text-align: center
@@ -242,6 +247,9 @@ video
   border-radius: 10px
   img
     width: 100%!important
+
+  @media screen and (max-width: 990px)
+    display: none
 
 
 .arrow-move
